--- a/angular/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/angular/src/app/customer-dashboard/customer-dashboard.component.html
@@ -1,3 +1,10 @@
 <div>
-    <h4>this is customet dashboard</h4>
+    <div>
+        <div align="right">
+            <input type="button" value="logout" (click)="logout()"/>
+        </div>
+        <h2>Welcome to Customer dashboard {{userName}}</h2>
+    
+    </div> <br><br>
+    <app-updatecustomer-data></app-updatecustomer-data>
 </div>
