--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div>
-    <div>
-    <h2>Welcome to Online shopping</h2>
+ <div>
+    <h1>Welcome to Online shopping</h1>
     <a routerLink="login">Login</a>
-    </div>
-    <div>
-    <router-outlet></router-outlet>
-    </div>
+<br>
+   <a routerLink="signup">SignUp</a>
 </div>
+</div>
+<router-outlet></router-outlet>
