pratiksha update done

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div>
   <app-home></app-home>
+  <!--<app-store-creditcard></app-store-creditcard>
+  <app-update-creditcard></app-update-creditcard>
+  <app-delete-creditcard></app-delete-creditcard>
+  <app-store-orders></app-store-orders>
+  <app-delete-orders></app-delete-orders>
+  <app-retrive-all-orders></app-retrive-all-orders>-->
 </div>
