Anil Updation Done

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,8 @@
 <div>
-  <app-home></app-home>
+  <!--<app-home></app-home>-->
+  <app-retrive-address></app-retrive-address>
+  <app-store-address></app-store-address>
+  <app-update-address></app-update-address>
+  <app-delete-address></app-delete-address>
+    
 </div>
