--- a/angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -4,3 +4,20 @@
     </div>
     <h2>Welcome to dashboard {{userName}}</h2>
 </div>
+<div>
+    <app-retrieve-item></app-retrieve-item>
+    <hr/>
+    <app-store-item></app-store-item>
+    <hr/>
+    <app-update-item></app-update-item>
+    <hr/>
+    <app-delete-item></app-delete-item>
+    <hr/>
+    <app-retrieve-product></app-retrieve-product>
+    <hr/>
+    <app-store-product></app-store-product>
+    <hr/>
+    <app-update-product></app-update-product>
+    <hr/>
+    <app-delete-product></app-delete-product>
+</div>
