--- a/angular/src/app/retrieve-item/retrieve-item.component.html
+++ b/angular/src/app/retrieve-item/retrieve-item.component.html
@@ -1,9 +1,5 @@
 <div>
-    <h4>item retrieve operation</h4>
-
-    <h4>item details</h4>
-    
-    <input type="button" value="See All Items" (click)="getAllItems()"/>
+    <input type="button" value="See All Categories" (click)="getAllItems()"/>
     <div *ngIf="flag">
         <table border="1">
         <tr>
