--- a/angular/src/app/store-item/store-item.component.html
+++ b/angular/src/app/store-item/store-item.component.html
@@ -5,7 +5,7 @@
         <input type="number" formControlName="itemid"/><br/>
         <label>ItemName</label>
         <input type="text" formControlName="itemname"/><br/>
-        <input type="submit" value="store product info"/>
+        <input type="submit" value="store item info"/>
         <input type="reset" value="reset"/>
     </form>
     {{msg}}
