--- a/angular/src/app/delete-item/delete-item.component.html
+++ b/angular/src/app/delete-item/delete-item.component.html
@@ -1,7 +1,11 @@
-<div>
-    <h4>deleting item</h4>
-    <input type="text" #itemIdRef/>
-    <input type="button" value="Delete Item" (click)="deleteItem(itemIdRef.value)"/>
-    <br/>
-    {{msg}}
+<div style="width:35%; margin: 25px auto" >
+    <div class="alert alert-danger" role="alert">
+        Status: {{msg}}    
+    </div>
+    <div class="form-group">
+    <input type="text" class="form-control form-control-lg" placeholder="Enter Id" #itemIdRef/>
+    </div>
+    <div class="form-group">
+    <input type="button" value="Delete Item" class="btn btn-lg btn-danger btn-block" (click)="deleteItem(itemIdRef.value)"/>
+    </div>
 </div>
