--- a/angular/src/app/delete-product/delete-product.component.html
+++ b/angular/src/app/delete-product/delete-product.component.html
@@ -1,7 +1,11 @@
-<div>
-    <h4>delete Product</h4>
-    <input type="number" #productIdRef/>
-    <input type="button" value="Delete Product" (click)="deleteProduct(productIdRef.value)"/>
-    <br/>
-    {{msg}}
+<div style="width:35%; margin: 25px auto" >
+    <div class="alert alert-danger" role="alert">
+        Status: {{msg}}    
+    </div>
+    <div class="form-group">
+    <input type="number" class="form-control form-control-lg" placeholder="Enter Id" #productIdRef/>
+    </div>
+    <div class="form-group">
+    <input type="button" value="Delete Product" class="btn btn-lg btn-danger btn-block" (click)="deleteProduct(productIdRef.value)"/>
+    </div>
 </div>
