--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,23 +1,9 @@
-<h2 align="center" class="display-4 mb-5">See, Buy and Get</h2>
-<div>
-    <table border="1">
-        <tr *ngFor="let product of productInfo">
-            <td>{{product.pid}}</td>
-            <td>{{product.pname}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.piid}}</td>
-        </tr>
-    </table>
-</div>
-<div>
-    <router-outlet></router-outlet>
-</div>
- <div>
-    <h1>Welcome to Online shopping</h1>
-    <a routerLink="login">Login</a>
-<br>
-   <a routerLink="signup">SignUp</a>
-</div>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand">ZenCart</a>
+    <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link " routerLink="login">Sign In</a>
+        <a class="nav-item nav-link " routerLink="signup">Sign Up</a>
+    </div>
+</nav>
 <router-outlet></router-outlet>
 
