--- a/angular/src/app/page-home/page-home.component.html
+++ b/angular/src/app/page-home/page-home.component.html
@@ -1,3 +1,4 @@
+<h2 align="center" class="display-4 mb-5">See, Buy and Get</h2>
 <div  class="row card-deck text-center">
     <div *ngFor="let product of productInfo" class="col-lg-4">
         <div class="card mb-4"  >
@@ -9,9 +10,9 @@
                     <p class="card-text"><strong>Price: </strong>{{product.price}}</p>
                     <p class="card-text"><strong>Category: </strong>{{product.itemname}}</p>
                 </div>
+                <br>
+                <a routerLink="/login" class="btn btn-primary btn-lg">Login to Buy</a>
             </div>    
         </div>  
     </div>
 </div>
-
-
