--- a/angular/src/app/retrieve-productbyid/retrieve-productbyid.component.html
+++ b/angular/src/app/retrieve-productbyid/retrieve-productbyid.component.html
@@ -1,17 +1,18 @@
+<hr/>
+{{msg}}    
 <div  class="row card-deck text-center">
-    <div *ngFor="let product of productInfo" class="col-lg-4">
+    <div *ngFor="let product of productRef" class="col-lg-4">
         <div class="card mb-4"  >
             <img height="50%" class="card-img-top" src="../../assets/{{product.pname}}.jpg" alt="{{product.pname}}">
             <div class="card-body">
                 <h4 class="card-title ">{{product.pname}}</h4>
                 <div class="text-left">
-                    <p class="card-test"><strong>Description: </strong>{{product.pname}}</p>
-                    <p class="card-text"><strong>Price: </strong>{{product.price}}</p>
+                    <p class="card-test"><strong>Id: </strong>{{product.pid}}</p>
+                    <p class="card-text"><strong>Product: </strong>{{product.pname}}</p>
+                    <p class="card-test"><strong>Price: </strong>{{product.price}}</p>
                     <p class="card-text"><strong>Category: </strong>{{product.itemname}}</p>
                 </div>
             </div>    
-        </div>  
+        </div>
     </div>
 </div>
-
-
