--- a/angular/src/app/store-product/store-product.component.html
+++ b/angular/src/app/store-product/store-product.component.html
@@ -1,16 +1,25 @@
-<div>
-    <h4>Store Product</h4>
+<div style="width:35%; margin: 25px auto" >
+    <div class="alert alert-primary" role="alert">
+        Status: {{msg}}    
+    </div>
     <form [formGroup]="productInfo" (ngSubmit)="storeProduct()">
-        <label>ProductId</label>
-        <input type="number" formControlName="pid"/><br/>
-        <label>Product Name</label>
-        <input type="text" formControlName="pname"/><br/>
-        <label>Price</label>
-        <input type="number" formControlName="price"/><br/>
-        <label>CategoryId</label>
-        <input type="number" formControlName="piid"/><br/>
-        <input type="submit" value="store product info"/>
-        <input type="reset" value="reset"/>
+        <div class="form-group">
+        <input type="number" formControlName="pid" class="form-control form-control-lg" placeholder="Enter Id"/>
+        </div>
+        <div class="form-group">
+        <input type="text" formControlName="pname" class="form-control form-control-lg" placeholder="Product"/>
+        </div>
+        <div class="form-group">
+        <input type="number" formControlName="price" class="form-control form-control-lg" placeholder="Price"/>
+        </div>
+        <div class="form-group">
+        <input type="number" formControlName="piid" class="form-control form-control-lg" placeholder="Category"/>
+        </div>
+        <div class="form-group">
+        <input type="submit" value="Add Product" class="btn btn-lg btn-primary btn-block"/>
+        </div>
+        <div class="form-group">
+        <input type="reset" value="reset" class="btn btn-lg btn-secondary btn-block"/>
+        </div>
     </form>
-    {{msg}}
 </div>
