--- a/angular/src/app/signup/signup.component.html
+++ b/angular/src/app/signup/signup.component.html
@@ -1,9 +1,9 @@
 <h2 align="center" class="display-4 mb-5">Sign Up</h2>
 <div style="width:40%; margin: 25px auto" >
-    <form [formGroup]="customerInfo" (ngSubmit)="storeCustomerDetails()">  
+    <form [formGroup]="customerInfo" (ngSubmit)="storeCustomer()">  
         <div class="form-group">      
-        <label><b>CustomerId</b></label>
-        <input type="number" formControlName="custid"  class="form-control form-control-lg" placeholder="Enter Id" required>
+        <label><b>Username</b></label>
+        <input type="text" formControlName="username"  class="form-control form-control-lg" placeholder="Enter Username">
         </div>
         <div class="form-group">
         <label><b>Account Number</b></label>  
@@ -11,15 +11,23 @@
         </div>
         <div class="form-group">
         <label><b>Name</b></label>
-        <input type="text" formControlName="custname" class="form-control form-control-lg" placeholder="Your Name">
+        <input type="text" formControlName="custname" class="form-control form-control-lg" placeholder="Enter Your Name">
         </div>
         <div class="form-group">
         <label><b>Password</b></label>
-        <input type="text" formControlName="password" class="form-control form-control-lg"  placeholder="Password">
+        <input type="password" formControlName="password" class="form-control form-control-lg"  placeholder="Password">
         </div>
         <div class="form-group">
-        <label><b>Debit Card Number</b></label>
-        <input type="number" formControlName="debitnum"  class="form-control form-control-lg" placeholder="Debit Card Number">
+        <label><b>Email</b></label>
+        <input type="email" formControlName="email"  class="form-control form-control-lg" placeholder="Email">
+        </div>
+        <div class="form-group">
+        <label><b>Address</b></label>
+        <input type="text" formControlName="address" class="form-control form-control-lg" placeholder="Address">
+        </div>
+        <div class="form-group">
+        <label><b>Mobile Number</b></label>
+        <input type="number" formControlName="mobnum"  class="form-control form-control-lg" placeholder="Mobile number">
         </div>
         <div class="form-group">
         <input type="submit"  value="Sign Up" class="btn btn-lg btn-primary btn-block">
@@ -28,6 +36,5 @@
         <input type="reset"  value="Reset" class="btn btn-lg btn-dark btn-block">
         </div> 
     </form> 
-    {{msg}}
 </div>
 
