--- a/angular/src/app/store-product/store-product.component.html
+++ b/angular/src/app/store-product/store-product.component.html
@@ -19,7 +19,7 @@
         <input type="submit" value="Add Product" class="btn btn-lg btn-primary btn-block"/>
         </div>
         <div class="form-group">
-        <input type="reset" value="reset" class="btn btn-lg btn-secondary btn-block"/>
+        <input type="reset" value="Reset" class="btn btn-lg btn-secondary btn-block"/>
         </div>
     </form>
 </div>
