--- a/angular/src/app/update-item/update-item.component.html
+++ b/angular/src/app/update-item/update-item.component.html
@@ -1,5 +1,5 @@
 <div style="width:35%; margin: 25px auto" >
-    <div class="alert alert-success" role="alert">
+    <div class="alert alert-primary" role="alert">
         Status: {{msg}}    
     </div>
     <form #itemRef="ngForm" (ngSubmit)="updateItem(itemRef.value)">
@@ -10,10 +10,10 @@
         <input type="text" name="itemname" class="form-control form-control-lg" placeholder="Category" ngModel/>
         </div>
         <div class="form-group">
-        <input type="submit" value="Update Item" class="btn btn-lg btn-success btn-block"/>
+        <input type="submit" value="Update Item" class="btn btn-lg btn-primary btn-block"/>
         </div>
         <div>
-        <input type="reset" value="reset" class="btn btn-lg btn-secondary btn-block"/>
+        <input type="reset" value="Reset" class="btn btn-lg btn-secondary btn-block"/>
         </div>
     </form>
 </div>
