--- a/angular/src/app/retrieve-product/retrieve-product.component.html
+++ b/angular/src/app/retrieve-product/retrieve-product.component.html
@@ -1,17 +1,24 @@
-<div  class="row card-deck text-center">
-    <div *ngFor="let product of productInfo" class="col-lg-4">
-        <div class="card mb-4"  >
-            <img height="50%" class="card-img-top" src="../../assets/{{product.pname}}.jpg" alt="{{product.pname}}">
-            <div class="card-body">
-                <h4 class="card-title ">{{product.pname}}</h4>
-                <div class="text-left">
-                    <p class="card-test"><strong>Description: </strong>{{product.pname}}</p>
-                    <p class="card-text"><strong>Price: </strong>{{product.price}}</p>
-                    <p class="card-text"><strong>Category: </strong>{{product.itemname}}</p>
-                </div>
-            </div>    
-        </div>  
+<div class="row card-deck text-center">
+  <div *ngFor="let product of productInfo" class="col-lg-4">
+    <div class="card mb-4">
+      <img
+        height="50%"
+        class="card-img-top"
+        src="../../assets/{{ product.pname }}.jpg"
+        alt="{{ product.pname }}"
+      />
+      <div class="card-body">
+        <h4 class="card-title">{{ product.pname }}</h4>
+        <div class="text-left">
+          <p class="card-test">
+            <strong>Description: </strong>{{ product.pname }}
+          </p>
+          <p class="card-text"><strong>Price: </strong>{{ product.price }}</p>
+          <p class="card-text">
+            <strong>Category: </strong>{{ product.itemname }}
+          </p>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
-
-
