--- a/angular/src/app/delete-product/delete-product.component.html
+++ b/angular/src/app/delete-product/delete-product.component.html
@@ -1,5 +1,5 @@
 <div style="width:35%; margin: 25px auto" >
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-danger" *ngIf="flag">
         Status: {{msg}}    
     </div>
     <div class="form-group">
