--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">ZenCart</a>
+    <a class="navbar-brand" routerLink="">
+        <img src="/assets/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+        zencart</a>
     <div class="navbar-nav ml-auto">
         <a class="nav-item nav-link " routerLink="login">Sign In</a>
         <a class="nav-item nav-link " routerLink="signup">Sign Up</a>
