--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,5 +1,9 @@
-<h2 align="center" class="display-4 mb-5">Sign In</h2>
+<div class="my-container">
+<h1 align="center" class="display-4 mb-5">Sign In</h1>
     <div style="width:40%; margin: 25px auto" >
+        <div class="alert alert-danger" *ngIf="flag">
+            {{msg}}
+        </div>
     <form #userRef="ngForm" (ngSubmit)="checkUser(userRef.value)">
         <div class="form-group">
         <label>Username</label>
@@ -14,7 +18,7 @@
         <label class="inline">Admin</label>&nbsp;&nbsp;&nbsp;&nbsp;
         <input type="radio" name="cat" value="customer" required ngModel/>&nbsp;
         <label class="inline">Customer</label>
-        <a class="float-right" routerLink="/signup">Sign Up</a>
+        <a class="float-right" routerLink="/password">Forgot Password?</a>
         </div>
         <div class="form-group">
         <input type="submit" value="Sign In" class="btn btn-lg btn-primary btn-block" [disabled]="!userRef.valid"/>
@@ -23,4 +27,5 @@
         <input type="reset" value="Reset" class="btn btn-lg btn-dark btn-block"/>
         </div>
     </form>
+</div>
 </div>
