--- a/angular/src/app/page-home/page-home.component.html
+++ b/angular/src/app/page-home/page-home.component.html
@@ -1,7 +1,9 @@
+<div class="my-container">
+<br>
 <h2 align="center" class="display-4 mb-5">See, Buy and Get</h2>
 <div  class="row card-deck text-center">
     <div *ngFor="let product of productInfo" class="col-lg-4">
-        <div class="card mb-4"  >
+        <div class="card mb-4">
             <img height="50%" class="card-img-top" src="../../assets/{{product.pname}}.jpg" alt="{{product.pname}}">
             <div class="card-body">
                 <h4 class="card-title ">{{product.pname}}</h4>
@@ -15,4 +17,5 @@
             </div>    
         </div>  
     </div>
+</div>
 </div>
