--- a/angular/src/app/signup/signup.component.html
+++ b/angular/src/app/signup/signup.component.html
@@ -1,5 +1,9 @@
-<h2 align="center" class="display-4 mb-5">Sign Up</h2>
+<div class="my-container">
+<h1 align="center" class="display-4 mb-5">Sign Up</h1>
 <div style="width:40%; margin: 25px auto" >
+    <div class="alert alert-secondary" *ngIf="flag">
+        {{msg}}
+    </div>
     <form [formGroup]="customerInfo" (ngSubmit)="storeCustomer()">  
         <div class="form-group">      
         <label><b>Username</b></label>
@@ -36,5 +40,6 @@
         <input type="reset"  value="Reset" class="btn btn-lg btn-dark btn-block">
         </div> 
     </form> 
+</div>
 </div>
 
