--- a/angular/src/app/page-home/page-home.component.html
+++ b/angular/src/app/page-home/page-home.component.html
@@ -4,7 +4,7 @@
 <div  class="row card-deck text-center">
     <div *ngFor="let product of productInfo" class="col-lg-4">
         <div class="card mb-4">
-            <img height="50%" class="card-img-top" src="../../assets/{{product.pname}}.jpg" alt="{{product.pname}}">
+            <img height="350" width="300" class="card-img-top" src="../../assets/{{product.pname}}.jpg" alt="{{product.pname}}">
             <div class="card-body">
                 <h4 class="card-title ">{{product.pname}}</h4>
                 <div class="text-left">
