--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="my-container">
+<!--<div class="my-container">
 <h1 align="center" class="display-4 mb-5">Sign In</h1>
     <div style="width:40%; margin: 25px auto" >
         <div class="alert alert-danger" *ngIf="flag">
@@ -27,7 +27,7 @@
         <div class="form-group">
         <input type="reset" value="Reset" class="btn btn-lg btn-dark btn-block"/>
         </div>
-    </form>
+    </form>-->
 
 <h2 align="center" class="display-4 mb-5">Sign In</h2>
 <div style="width: 40%; margin: 25px auto">
@@ -117,4 +117,4 @@
   </form>
 
 </div>
-</div>
+
