--- a/angular/src/app/storeto-cart/storeto-cart.component.html
+++ b/angular/src/app/storeto-cart/storeto-cart.component.html
@@ -19,7 +19,7 @@
             <td class="align-middle">{{item.pname}}</td>
             <td class="align-middle">{{item.price | currency:'INR'}}</td>
             <td class="align-middle">{{item.itemname}}</td>
-            <td class="align-middle"><a (click)="remove()">Remove</a></td>
+            <td class="align-middle"><a (click)="remove(item.pid)">Remove</a></td>
         </tr> 
 </table>   
 <div *ngIf="cart?.length > 0;">
