--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,34 +1,3 @@
-
-<div class="my-container">
-<h1 align="center" class="display-4 mb-5">Sign In</h1>
-    <div style="width:40%; margin: 25px auto" >
-        <div class="alert alert-danger" *ngIf="flag">
-            {{msg}}
-        </div>
-    <form #userRef="ngForm" (ngSubmit)="checkUser(userRef.value)">
-        <div class="form-group">
-        <label>Username</label>
-        <input type="text" name="user" class="form-control form-control-lg"  placeholder="Enter Username" required ngModel/>
-        </div>
-        <div class="form-group">
-        <label>Password</label>
-        <input type="password" name="pass" class="form-control form-control-lg" placeholder="Enter Password" required ngModel/>
-        </div>
-        <div class="form-group">
-        <input type="radio" name="cat" value="admin" required ngModel/>&nbsp;
-        <label class="inline">Admin</label>&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="radio" name="cat" value="customer" required ngModel/>&nbsp;
-        <label class="inline">Customer</label>
-        <a class="float-right" routerLink="/password">Forgot Password?</a>
-        </div>
-        <div class="form-group">
-        <input type="submit" value="Sign In" class="btn btn-lg btn-primary btn-block" [disabled]="!userRef.valid"/>
-        </div>
-        <div class="form-group">
-        <input type="reset" value="Reset" class="btn btn-lg btn-dark btn-block"/>
-        </div>
-    </form>
-
 <h2 align="center" class="display-4 mb-5">Sign In</h2>
 <div style="width: 40%; margin: 25px auto">
   <form #userRef="ngForm" (ngSubmit)="checkUser(userRef.value)">
@@ -95,13 +64,13 @@
         required
       />&nbsp;
       <label class="inline">Customer</label>
-      <div *ngIf="catRef.errors && (catRef.dirty || catRef.untouched)">
+      <div *ngIf="catRef.errors && (catRef.dirty || catRef.touched)">
                      <span [hidden]="!catRef.errors.required" style="color: red"
           >                 **Category is required             </span
         >                    
       </div>
 
-      <a class="float-right" routerLink="/signup">Sign Up</a>
+      <a class="float-right" routerLink="/password">Forget Password?</a>
     </div>
     <div class="form-group">
       <input
@@ -115,6 +84,4 @@
       <input type="reset" value="Reset" class="btn btn-lg btn-dark btn-block" />
     </div>
   </form>
-
-</div>
 </div>
