--- a/angular/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">Welcome {{userName}}</a>
+    <a class="navbar-brand" style="color: white;">{{userName}}</a>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" (click)="logout()">Sign Out</a>
     </div>
@@ -30,6 +30,5 @@
       <a class="nav-link" routerLink="deleteproduct">Delete Product</a>
     </li>
   </ul>
-  <br/>
 <router-outlet></router-outlet>
 
