--- a/angular/src/app/password/password.component.html
+++ b/angular/src/app/password/password.component.html
@@ -5,22 +5,80 @@
             <div class="alert alert-info" *ngIf="flag">
                 {{msg}}
             </div>
-        <form #passRef="ngForm" (ngSubmit)="changePassword(passRef.value)">
-            <div class="form-group">
-            <label>Username</label>
-            <input type="text" name="username" class="form-control form-control-lg"  placeholder="Enter Username" required ngModel/>
-            </div>
-            <div class="form-group">
-            <label>Password</label>
-            <input type="password" name="password" class="form-control form-control-lg" placeholder="Enter New Password" required ngModel/>
-            </div>
-            <div class="form-group">
-            <input type="submit" value="Submit" class="btn btn-lg btn-primary btn-block" [disabled]="!passRef.valid"/>
-            </div>
-            <div class="form-group">
-            <input type="reset" value="Reset" class="btn btn-lg btn-dark btn-block"/>
-            </div>
-        </form>
+        
+            <form #passRef="ngForm" (ngSubmit)="changePassword(passRef.value)">
+                <div class="form-group">
+                  <label>Username</label>
+                  <input
+                    type="text"
+                    name="username"
+                    ngModel
+                    #u1Ref="ngModel"
+                    class="form-control form-control-lg"
+                    placeholder="Enter Username"
+                    required
+                    minlength="2"
+                  />
+                  <div *ngIf="u1Ref.errors && (u1Ref.dirty || u1Ref.touched)">
+                                 <span
+                      [hidden]="!u1Ref.errors.required"
+                      style="color: red"
+                      >                 **UserName is required             </span
+                    >             <span
+                      [hidden]="!u1Ref.errors.minlength"
+                      style="color: red"
+                      >                 **minlength must be 2 character             </span
+                    >                     
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label>Password</label>
+                  <input
+                    type="password"
+                    name="password"
+                    ngModel
+                    #passwordRef="ngModel"
+                    class="form-control form-control-lg"
+                    placeholder="Enter New Password"
+                    maxlength="20"
+                    required
+                    pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[#?!@$%^&*-]).{8,}$"
+                  />
+                  <div
+                    *ngIf="
+                      passwordRef.errors && (passwordRef.dirty || passwordRef.touched)
+                    "
+                  >
+                                 <span
+                      [hidden]="!passwordRef.errors.required"
+                      style="color: red"
+                      >                 **Password is required             </span
+                    >             <span
+                      [hidden]="!passwordRef.errors.pattern"
+                      style="color: red"
+                      >**Password must contains at least 8 character and maximum 20
+                      characters with one uppercase, one lowercase , one number and one
+                      special character</span
+                    >                                    
+                  </div>
+                </div>
+                <div class="form-group">
+                  <input
+                    type="submit"
+                    value="Submit"
+                    class="btn btn-lg btn-primary btn-block"
+                    [disabled]="!passRef.valid"
+                  />
+                </div>
+                <div class="form-group">
+                  <input
+                    type="reset"
+                    value="Reset"
+                    class="btn btn-lg btn-dark btn-block"
+                  />
+                </div>
+              </form>
+        
     </div>
     </div>
     
