--- a/angular/src/app/retrieve-productbyid/retrieve-productbyid.component.html
+++ b/angular/src/app/retrieve-productbyid/retrieve-productbyid.component.html
@@ -1,4 +1,5 @@
-<hr/>
+<div class="my-container">
+    <h4 align="center">Brands</h4>
 {{msg}}    
 <div  class="row card-deck text-center">
     <div *ngFor="let product of productRef" class="col-lg-4">
@@ -15,4 +16,5 @@
             </div>    
         </div>
     </div>
+</div>
 </div>
