--- a/angular/src/app/store-product/store-product.component.html
+++ b/angular/src/app/store-product/store-product.component.html
@@ -1,4 +1,6 @@
-<div style="width:35%; margin: 25px auto" >
+<div class="my-container">
+    <br/><br/>
+<div style="width:35%; margin: 0 auto" >
     <div class="alert alert-primary" *ngIf="flag">
         Status: {{msg}}    
     </div>
@@ -22,4 +24,5 @@
         <input type="reset" value="Reset" class="btn btn-lg btn-secondary btn-block"/>
         </div>
     </form>
+</div>
 </div>
