--- a/angular/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/angular/src/app/customer-dashboard/customer-dashboard.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">Welcome {{user}}</a>
+  <a class="navbar-brand" routerLink="/customer">zencart</a>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link " routerLink="orders">
         <i class="fas fa-list-ul"></i>
@@ -21,5 +21,4 @@
       <a class="nav-link" routerLink="allproductscustomer">See All Products</a>
     </li>
   </ul>
-  <br/>
 <router-outlet></router-outlet>
