--- a/angular/src/app/page-admin/page-admin.component.html
+++ b/angular/src/app/page-admin/page-admin.component.html
@@ -1,3 +1,5 @@
+<div class="my-container">
+    <br/>
 <h2 align="center" class="display-4 mb-5">See, Buy and Get</h2>
 <div  class="row card-deck text-center">
     <div *ngFor="let product of productInfo" class="col-lg-4">
@@ -15,4 +17,5 @@
             </div>    
         </div>  
     </div>
+</div>
 </div>
