--- a/angular/src/app/profile/profile.component.html
+++ b/angular/src/app/profile/profile.component.html
@@ -1,11 +1,15 @@
+<div class="my-container">
 <h2 align="center" class="display-4 mb-5">Edit Profile</h2>
 <div style="width: 40%; margin: 25px auto">
+  <div class="alert alert-secondary" *ngIf="flag">
+    {{msg}}
+  </div>
   <form #updateRef="ngForm" (ngSubmit)="updateCustomer()">
     <div class="form-group">
       <label><b>Username</b></label>
       <input
         readonly
-        [value]="customerRef?.username"
+        [value]=customerRef?.username
         type="text"
         name="username"
         class="form-control form-control-lg"
@@ -105,7 +109,6 @@
         type="submit"
         value="Update"
         class="btn btn-lg btn-primary btn-block"
-        [disabled]="updateRef.invalid"
       />
     </div>
   </form>
@@ -115,4 +118,5 @@
     class="btn btn-lg btn-danger btn-block"
     (click)="deleteCustomer()"
   />
+</div>
 </div>
