--- a/angular/src/app/retrieve-item/retrieve-item.component.html
+++ b/angular/src/app/retrieve-item/retrieve-item.component.html
@@ -1,3 +1,5 @@
+<div class="my-container">
+    <br/>
 <div class="row card-deck text-center">
     <div *ngFor="let item of itemInfo" class="col-lg-4">
         <div class="card mb-4">
@@ -13,5 +15,6 @@
             </div>    
         </div>  
     </div>
+</div>
 </div>
 <router-outlet></router-outlet>
