--- a/angular/src/app/retrieve-itemcustomer/retrieve-itemcustomer.component.html
+++ b/angular/src/app/retrieve-itemcustomer/retrieve-itemcustomer.component.html
@@ -1,3 +1,5 @@
+<div class="my-container">
+    <br/>
 <div  class="row card-deck text-center">
     <div *ngFor="let item of itemInfo" class="col-lg-4">
         <div class="card mb-4"  >
@@ -12,6 +14,7 @@
             </div>    
         </div>  
     </div>
+</div>
 </div>
 <router-outlet></router-outlet>
 
