--- a/angular/src/app/retrieve-product/retrieve-product.component.html
+++ b/angular/src/app/retrieve-product/retrieve-product.component.html
@@ -1,3 +1,5 @@
+<div class="my-container">
+  <br/>
 <div class="row card-deck text-center">
   <div *ngFor="let product of productInfo" class="col-lg-4">
     <div class="card mb-4">
@@ -21,4 +23,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
