--- a/angular/src/app/retrieve-productcustomer/retrieve-productcustomer.component.html
+++ b/angular/src/app/retrieve-productcustomer/retrieve-productcustomer.component.html
@@ -1,3 +1,5 @@
+<div class="my-container">
+    <br/>
 <div  class="row card-deck text-center">
     <div *ngFor="let product of productInfo" class="col-lg-4">
         <div class="card mb-4"  >
@@ -14,5 +16,6 @@
             </div>    
         </div>  
     </div>
+</div>
 </div>
 
